desafio-ocorrencia-ultima-letra

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 
 /SomaDosPares/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.SomaDosPares.00
 /FizzBuzz/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.FizzBuzz.00
+/Desafio Última Ocorrência de Uma Letra/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.Desafio Última Ocorrência de Uma Letra.00
