--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /FizzBuzz/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.FizzBuzz.00
 /Desafio Última Ocorrência de Uma Letra/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.Desafio Última Ocorrência de Uma Letra.00
 /DesafioVoidStatic/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.DesafioVoidStatic.00
+/Biblioteca/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.Biblioteca.00
