exercicio-abstract-interface

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /Desafio Última Ocorrência de Uma Letra/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.Desafio Última Ocorrência de Uma Letra.00
 /DesafioVoidStatic/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.DesafioVoidStatic.00
 /Biblioteca/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.Biblioteca.00
+/exercicio-classesAbtratas-e-interface/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.exercicio-classesAbtratas-e-interface.00
