--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /DesafioVoidStatic/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.DesafioVoidStatic.00
 /Biblioteca/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.Biblioteca.00
 /exercicio-classesAbtratas-e-interface/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.exercicio-classesAbtratas-e-interface.00
+/GerenciadorDeTarefas/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.GerenciadorDeTarefas.00
