--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /Biblioteca/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.Biblioteca.00
 /exercicio-classesAbtratas-e-interface/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.exercicio-classesAbtratas-e-interface.00
 /GerenciadorDeTarefas/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.GerenciadorDeTarefas.00
+/GerenciadorDeTarefas/.vs/GerenciadorDeTarefas/FileContentIndex
