--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 /exercicio-classesAbtratas-e-interface/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.exercicio-classesAbtratas-e-interface.00
 /GerenciadorDeTarefas/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.GerenciadorDeTarefas.00
 /GerenciadorDeTarefas/.vs/GerenciadorDeTarefas/FileContentIndex
+/DesafiosGrok/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.DesafiosGrok.00
+/DesafiosGrok/.vs/DesafiosGrok
