--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 /GerenciadorDeTarefas/.vs/GerenciadorDeTarefas/FileContentIndex
 /DesafiosGrok/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.DesafiosGrok.00
 /DesafiosGrok/.vs/DesafiosGrok
+/matrizes/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.matrizes.00
+/matrizes/.vs/matrizes
