Implement last occurrence search for a letter in a string

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 /DesafiosGrok/.vs/DesafiosGrok
 /matrizes/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.matrizes.00
 /matrizes/.vs/matrizes
+/find-repeated-number/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.find-repeated-number.00
+/find-repeated-number/.vs/find-repeated-number
