--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@
 /matrizes/.vs/matrizes
 /find-repeated-number/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.find-repeated-number.00
 /find-repeated-number/.vs/find-repeated-number
+/matrix-search/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.matrix-search.00
+/matrix-search/.vs/matrix-search/FileContentIndex
