--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@
 /find-repeated-number/.vs/find-repeated-number
 /matrix-search/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.matrix-search.00
 /matrix-search/.vs/matrix-search/FileContentIndex
+/orientacaoObj
