--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@
 /matrix-search/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.matrix-search.00
 /matrix-search/.vs/matrix-search/FileContentIndex
 /orientacaoObj
+/EmpSys/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.EmpSys.00
+/EmpSys/.vs/EmpSys/FileContentIndex
