--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@
 /orientacaoObj
 /EmpSys/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.EmpSys.00
 /EmpSys/.vs/EmpSys/FileContentIndex
+/even-Sum/SomaDosPares/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.SomaDosPares.00
+/even-Sum/SomaDosPares/.vs
