--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,7 @@
 /EmpSys/.vs/EmpSys/FileContentIndex
 /even-Sum/SomaDosPares/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.SomaDosPares.00
 /even-Sum/SomaDosPares/.vs
+/reverse-array/.vs/reverse-array
+/reverse-array/reverse-array/bin/Debug/net8.0
+/reverse-array/reverse-array/obj
+/reverse-array/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.reverse-array.00
