--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,7 @@
 /reverse-array/reverse-array/bin/Debug/net8.0
 /reverse-array/reverse-array/obj
 /reverse-array/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.reverse-array.00
+/ReverseEvenNumbers/.vs
+/ReverseEvenNumbers/ReverseEvenNumbers/bin/Debug/net8.0
+/ReverseEvenNumbers/ReverseEvenNumbers/obj
+/ReverseEvenNumbers/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.ReverseEvenNumbers.00
