--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@
 /ReverseEvenNumbers/ReverseEvenNumbers/bin/Debug/net8.0
 /ReverseEvenNumbers/ReverseEvenNumbers/obj
 /ReverseEvenNumbers/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.ReverseEvenNumbers.00
+/BubbleSort/.vs/BubbleSort
+/BubbleSort/BubbleSort/bin/Debug/net8.0
+/BubbleSort/BubbleSort/obj
+/BubbleSort/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.BubbleSort.00
