--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@
 /BubbleSort/BubbleSort/bin/Debug/net8.0
 /BubbleSort/BubbleSort/obj
 /BubbleSort/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.BubbleSort.00
+/BubbleSort/.vs/ProjectEvaluation
