--- a/.gitignore
+++ b/.gitignore
@@ -2,37 +2,7 @@
 # Este arquivo .gitignore foi criado automaticamente pelo Microsoft(R) Visual Studio.
 ################################################################################
 
-/SomaDosPares/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.SomaDosPares.00
-/FizzBuzz/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.FizzBuzz.00
-/Desafio Última Ocorrência de Uma Letra/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.Desafio Última Ocorrência de Uma Letra.00
-/DesafioVoidStatic/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.DesafioVoidStatic.00
-/Biblioteca/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.Biblioteca.00
-/exercicio-classesAbtratas-e-interface/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.exercicio-classesAbtratas-e-interface.00
-/GerenciadorDeTarefas/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.GerenciadorDeTarefas.00
-/GerenciadorDeTarefas/.vs/GerenciadorDeTarefas/FileContentIndex
-/DesafiosGrok/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.DesafiosGrok.00
-/DesafiosGrok/.vs/DesafiosGrok
-/matrizes/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.matrizes.00
-/matrizes/.vs/matrizes
-/find-repeated-number/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.find-repeated-number.00
-/find-repeated-number/.vs/find-repeated-number
-/matrix-search/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.matrix-search.00
-/matrix-search/.vs/matrix-search/FileContentIndex
-/orientacaoObj
-/EmpSys/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.EmpSys.00
-/EmpSys/.vs/EmpSys/FileContentIndex
-/even-Sum/SomaDosPares/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.SomaDosPares.00
-/even-Sum/SomaDosPares/.vs
-/reverse-array/.vs/reverse-array
-/reverse-array/reverse-array/bin/Debug/net8.0
-/reverse-array/reverse-array/obj
-/reverse-array/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.reverse-array.00
-/ReverseEvenNumbers/.vs
-/ReverseEvenNumbers/ReverseEvenNumbers/bin/Debug/net8.0
-/ReverseEvenNumbers/ReverseEvenNumbers/obj
-/ReverseEvenNumbers/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.ReverseEvenNumbers.00
-/BubbleSort/.vs/BubbleSort
-/BubbleSort/BubbleSort/bin/Debug/net8.0
-/BubbleSort/BubbleSort/obj
-/BubbleSort/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.BubbleSort.00
-/BubbleSort/.vs/ProjectEvaluation
+/BubbleSortReverse/.vs/BubbleSortReverse
+/BubbleSortReverse/BubbleSortReverse/obj/Debug/net8.0
+/BubbleSortReverse/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.BubbleSortReverse.00/BuildScriptCache
+/BubbleSortReverse/_ReSharper.Caches/ReSharperPlatformVs17242_da1abf74.BubbleSortReverse.00
